# tqhdl

./: .env.example  .gitignore  CLAUDE.md  EDA_Regional_Sales_Analysis copy.ipynb  EDA_Regional_Sales_Analysis.ipynb  HANDOFF.md  PROJECT_REPORT.docx  PROJECT_REPORT.md  README.md  Summary.txt  USA_Regional_Sales_Analysis_Project_Documentation.txt  app.py  charts.py  data.py  insights.py  prompt.txt  pyproject.toml  theme.py
docs/superpowers/plans/: 2026-04-18-regional-sales-gradio-implementation.md
docs/superpowers/specs/: 2026-04-18-regional-sales-gradio-design.md
tests/: conftest.py  test_charts.py  test_data.py  test_insights.py  test_kpis.py
