[project]
name = "regional-sales-summary"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.12.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pygwalker>=0.5.0.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
